# text-2-image-on-akash

./: README.md  deploy.yaml  pyproject.toml
configs/: settings.yaml
docker/: Dockerfile
src/: app.py
